# daedalus

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  PROJECT.md  README.md  aarch64-daedalus.json  book.toml  build.rs  linker.ld  qemu-runner.sh  test-eth-diag.sh
.cargo/: config.toml
.claude/workflows/: verify-protocol-diagrams.md  verify-safety-comments.md
.githooks/: pre-commit
.github/workflows/: ci.yml
book/src/: SUMMARY.md  roadmap.md
book/src/architecture/: exceptions.md  linker-script.md  mmu-paging.md
book/src/decisions/: adr-001-pi-only.md
book/src/hardware/: gpio.md  timer.md  uart-pl011.md
book/src/references/: similar-projects.md
daedalus-dev-server/: Cargo.toml
daedalus-dev-server/.cargo/: config.toml
daedalus-dev-server/src/: main.rs
docs/: MILESTONE-12-SUMMARY.md  ethernet-driver-research.md
docs/src/: SUMMARY.md  intro.md  networking-guide.md  roadmap.md
docs/src/architecture/: allocator.md  boot-sequence.md  exceptions.md  mmu-paging.md  networking.md  testing.md
docs/src/decisions/: README.md  adr-001-pi-only.md  (+4 more)
scripts/: build-docs.sh  build-kernel.sh  gen-protocol-diagrams.py  protocol.sh  qemu-runner.sh
src/: allocator.rs  boot_mode.rs  exceptions.rs  lib.rs  main.rs  pl011.rs  qemu.rs  shell.rs
src/arch/: mod.rs
src/drivers/: genet.rs  gic.rs  gpio.rs  mod.rs  timer.rs  uart.rs
src/dt/: mod.rs
src/mm/: allocator.rs  mod.rs
src/net/: arp.rs  arp_diag.rs  ethernet.rs  http.rs  mod.rs  packet_pool.rs  protocol.rs  router.rs  skbuff.rs
src/sync/: mod.rs  mutex.rs
(+40 files in other folders)
