[package]
name = "daedalus"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "none")']
runner = "bootimage runner"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[bin]]
name = "daedalus"
test = false
bench = false