[workspace]
members = [".", "daedalus-dev-server"]

[package]
name = "daedalus"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
volatile = "0.2.6"
smoltcp = { version = "0.11", default-features = false, features = ["proto-ipv4", "socket-tcp", "medium-ethernet", "alloc"] }

[dependencies.fdt-rs]
version = "0.4"
default-features = false
# no_std compatible, no allocation required for basic parsing

[[bin]]
name = "daedalus"
test = false
bench = false
